--- a/_posts/0000-01-02-JThor1990.md
+++ b/_posts/0000-01-02-JThor1990.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-Your text
+*Something's afoot, and I think it"'s on the end of my leg
 Use the left arrow to go back!
